--- a/composer.json
+++ b/composer.json
@@ -1,11 +1,14 @@
 {
     "name": "pervozdanniy/translation-client",
     "description": "Client for translation API",
+    "homepage": "http://dev-api.translate.center/api-docs/",
     "type": "library",
+    "license": "MIT",
     "authors": [
         {
             "name": "Danylo",
-            "email": "pervozadiy@gmail.com"
+            "email": "pervozadiy@gmail.com",
+            "role": "Developer"
         }
     ],
     "minimum-stability": "dev",
@@ -15,9 +18,16 @@
         "psr/simple-cache": "^1.0",
         "guzzlehttp/guzzle": "^7.0"
     },
+    "require-dev": {
+        "friendsofphp/php-cs-fixer": "~2.1"
+    },
     "autoload": {
         "psr-4": {
             "Translate\\": "src/"
         }
+    },
+    "scripts": {
+        "cs": "php-cs-fixer fix -v --diff --dry-run",
+        "cs-fix": "php-cs-fixer fix -v --diff"
     }
 }
