--- a/composer.json
+++ b/composer.json
@@ -15,8 +15,10 @@
     "prefer-stable": true,
     "require": {
         "php": "^7.2",
+        "ext-json": "*",
         "psr/simple-cache": "^1.0",
-        "guzzlehttp/guzzle": "^6.0"
+        "guzzlehttp/guzzle": "^5.0",
+        "psr/http-message": "^1.0"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "~2.1"
