--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
     "minimum-stability": "dev",
     "prefer-stable": true,
     "require": {
-        "php": "^7.2",
+        "php": "^7.2|^8.0",
         "psr/simple-cache": "^1.0",
         "guzzlehttp/guzzle": "^6.0|^7.0"
     },
